syntax = "proto3";

package mypackage;

message FeatureExtractionRequest {
  string file_object_id = 1;
}

message FeatureExtractionResponse {
  string filename = 1;
  float acousticness = 2;
  float energy = 3;
  float valence = 4;
  float liveness = 5;
  float instrumentalness = 6;
  float speechiness = 7;
  float loudness = 8;
  int32 key = 9;
  float danceability = 10;
  float tempo = 11;
  float duration = 12;
  int32 mode = 13;
}

service FeatureExtractionService {
  rpc ExtractFeatures(FeatureExtractionRequest) returns (FeatureExtractionResponse);
}
